# ruledoc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_script.md
.github/workflows/: ci.yml  python-publish.yml
docs/: rule_development.md
ruledoc/: __init__.py  __main__.py  cli.py  config.py  context.py  exceptions.py  formatter.py  pandoc_converter.py
ruledoc/processors/: __init__.py  base.py  caption_processor.py  heading_processor.py  list_processor.py  style_processor.py
ruledoc/rules/: __init__.py  base.py
ruledoc/rules/yzu/: __init__.py  common.py  yzu_design.py  yzu_thesis.py
tests/: __init__.py  requirements.txt  test_cli.py  test_context.py  test_error_handling.py  test_exceptions.py  test_integration.py  test_pandoc_converter.py  test_processors.py  test_rules.py  test_snapshot.py  test_word_compatibility.py
